infrastructure/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    network-egress-apiserver: "true"
    network-egress-dns: "true"
    network-egress-s3: "true"
